--- a/css/styles.css
+++ b/css/styles.css
@@ -114,7 +114,6 @@ p {
 .main-nav {
   color: var(--color-primary-light);
   text-decoration: none;
-  margin-bottom: 16px;
 }
 
 .main-nav:hover {
@@ -230,7 +229,8 @@ p {
 
 .chef-photo {
   border-radius: 4px 4px 4px 200px;
-  box-shadow: -16px 16px 0px 0px var(--color-primary-light),
+  box-shadow:
+    -16px 16px 0px 0px var(--color-primary-light),
     -16px 16px 0px 1px var(--color-brand-light2);
 }
 
@@ -273,10 +273,35 @@ p {
 .card {
   border: 2px solid grey;
   border-radius: 16px;
-  background-color: #465929;
+  background-image: linear-gradient(
+    180deg,
+    rgba(49, 38, 26, 0) 55.21%,
+    rgba(49, 38, 26, 0.71) 72.92%,
+    #31261a 100%
+  );
   flex-basis: calc((100% - 40px) / 3);
   padding: 24px;
 }
+
+.carousel-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: transparent;
+  border-radius: 50%;
+  border: 1px solid var(--color-primary-dark);
+  width: 44px;
+  height: 44px;
+  padding: 0;
+  fill: var(--color-primary-dark);
+  cursor: pointer;
+}
+
+.carousel-button:hover {
+  background-color: var(--color-primary-dark);
+  fill: var(--color-primary-light);
+}
+
 .format-article {
   color: var(--color-primary-light);
   height: 444px;
@@ -311,21 +336,40 @@ p {
 
 .footer-container {
   display: flex;
-  flex-grow: 1;
   padding: 32px 8px;
   gap: 166px;
 }
 
 .footer-nav {
   display: flex;
-  text-align: center;
   gap: 166px;
+}
+
+.footer-list {
+  max-width: 211px;
+}
+
+.footer-item {
+  margin-bottom: 16px;
+}
+
+.contacts {
+  max-width: 211px;
 }
 
 .address-link {
   font-style: normal;
   font-weight: 300;
   font-size: 16px;
+}
+
+.address-icon {
+  fill: var(--color-primary-light);
+}
+
+.icons {
+  display: flex;
+  gap: 22px;
 }
 
 .copyright {
